# gemma-voice

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: speech_default.yaml
docs/: setup.md  training.md
hf_export/gemma-turkish-speech-e2b-mimi/: README.md  config.json  inference.py  model_index.json  requirements.txt
hf_export/gemma-turkish-speech-e2b-mimi/src/gemma_turkish/: __init__.py
hf_export/gemma-turkish-speech-e2b-mimi/src/gemma_turkish/speech/: __init__.py  collator.py  data.py  hub.py  model.py  trainer.py
scripts/: export_hf_model.py  generate_speech_tokens.py  inference.py  plot_trainer_state.py  resynth_eval_audio.py  train_speech.py
src/gemma_turkish/: __init__.py
src/gemma_turkish/speech/: __init__.py  codec.py  config.py  data.py  model.py  trainer.py
