[project]
name = "gemma-turkish"
version = "0.1.0"
description = "Turkish-focused training stack for Gemma 4 E4B (multimodal + optional speech-head experiments)"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "Cihan" }]

dependencies = [
    "torch>=2.4.0",
    "torchvision>=0.19.0",
    "transformers>=5.9.0",
    "datasets>=3.2.0",
    "accelerate>=1.2.0",
    "peft>=0.14.0",
    "trl>=0.15.0",
    "bitsandbytes>=0.45.0; sys_platform != 'darwin'",
    "huggingface-hub>=0.27.0",
    "safetensors>=0.5.0",
    "sentencepiece>=0.2.0",
    "tokenizers>=0.21.0",
    "einops>=0.8.0",
    "scipy>=1.14.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "pyarrow>=18.0.0",
    "tqdm>=4.67.0",
    "pyyaml>=6.0.0",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "evaluate>=0.4.0",
    "jiwer>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "ipykernel>=6.29.0",
]
logging = [
    "wandb>=0.19.0",
    "tensorboard>=2.18.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gemma_turkish"]

[tool.ruff]
line-length = 100
target-version = "py312"
